--- a/FinalProject/Views/Events/Details.cshtml
+++ b/FinalProject/Views/Events/Details.cshtml
@@ -19,11 +19,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.type)
+            @Html.DisplayNameFor(model => model.partyType)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.type)
+            @Html.DisplayFor(model => model.partyType)
         </dd>
 
         <dt>
