--- a/FinalProject/Views/Events/Create.cshtml
+++ b/FinalProject/Views/Events/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@model FinalProject.Models.Event
-
+﻿
+@model FinalProject.Models.Event
 @{
     ViewBag.Title = "Create";
 }
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Event</h4>
         <hr />
@@ -18,16 +18,19 @@
         <div class="form-group">
             @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control" } })
+                <link href="~/Content/jquery.datetimepicker.css" rel="stylesheet" />
+                @Html.TextBoxFor(m => m.date, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.type, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.partyType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.type, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.type, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(m => m.partyType,
+                new SelectList(Enum.GetValues(typeof(FinalProject.Models.PartyType))),
+                "Select Party Type")
+                @Html.ValidationMessageFor(model => model.partyType, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -61,4 +64,14 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/jquery.datetimepicker.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#date').datetimepicker({
+                format: 'd-M-y h:m:s A',
+                // { 01-Jan - 01 12: 00: 00 AM }
+                value: new Date()
+            });
+        });
+    </script>
 }
