--- a/FinalProject/Views/Events/Create.cshtml
+++ b/FinalProject/Views/Events/Create.cshtml
@@ -4,6 +4,16 @@
     ViewBag.Title = "Create";
 }
 
+<style>
+
+    .dropdown-list {
+        width: 400px;
+        height: 35px;
+        border-color: silver;    
+        padding-left: 8px;
+    }
+</style>
+
 <h2>Create</h2>
 
 
@@ -29,7 +39,7 @@
             <div class="col-md-10">
                 @Html.DropDownListFor(m => m.partyType,
                 new SelectList(Enum.GetValues(typeof(FinalProject.Models.PartyType))),
-                "Select Party Type")
+                "Select Party Type", new {@class = "dropdown-list"})
                 @Html.ValidationMessageFor(model => model.partyType, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -67,8 +77,22 @@
     <script src="~/Scripts/jquery.datetimepicker.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
+            const maxDate = new Date();
+            maxDate.setMonth(maxDate.getMonth() + 4);
+
+            const minTime = new Date();
+            minTime.setHours(7);
+
+            const maxTime = new Date();
+            maxTime.setHours(20);
+
             $('#date').datetimepicker({
-                format: 'd-M-y h:m:s A',
+
+                minTime: minTime,
+                maxTime: maxTime,
+                maxDate: maxDate,
+                minDate: '-1969/12/31',
+                format: 'd-M-y h:00 A',
                 // { 01-Jan - 01 12: 00: 00 AM }
                 value: new Date()
             });
